--- a/front/nginx_mac.conf
+++ b/front/nginx_mac.conf
@@ -10,8 +10,8 @@ server {
     listen 80;
     server_name  localhost;
 
-    access_log /var/log/nginx/Drip.access.log;
-    error_log /var/log/nginx/Drip.error.log;
+    #access_log /var/log/nginx/Drip.access.log;
+    #error_log /var/log/nginx/Drip.error.log;
 
     client_max_body_size 20M;
 
